syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.auth";
option java_multiple_files = true;

package requests;

message RegistrationRequest {
    string username = 1;
    string password = 3;
    // IMHO, confirmation should be on client side but ok
    string confirmed_password = 4;
}
